20151020: 0.8.7
	* csc_strbody.c: do not calculate the length if len is NULL.

20150513: 0.8.6
	* smm_config.c: truncated the existed configure by CSC_CFG_RWC method,
	otherwise the contents would be overlapped with the previous contents.

20150424: 0.8.5
	* csc_config.c: added csc_cfg_delete_key() and csc_cfg_delete_block().

20150311: 0.8.4
	* main/Makefile: fixed a bug that mkclicmd was forgotten to be cleaned.

20150305: 0.8.3
	* smm_config.c: fixed a bug that in Win32 the registry path
	missed a '\' between "SOFTWARE" and the path. Test case also changed.

20141012: 0.8.2
	* Makefile: added _FILE_OFFSET_BITS=64 macro otherwise the smm_fstat()
	would be failed when file size was over 2GB.

20140815: 0.8.1
	* Makefile: disable the slog-to-socket by macro SLOG_SOCKET
	because it's not used currently.

20140815: 0.8.0
	* slog: revised the slog module and redefined some functions.
	TODO: port the slog socket to winapi

20140717: 0.7.6:
	* csc_cfg_saveas(): update rext->items while saving
	Note that csc_cfg_status() is limited functioned to debug only.

20140717: 0.7.5
	* smm_config_open(): fixed a bug that created the wrong directory.

20140716: 0.7.4
	* csc_config.c/smm_config.c: added supportive functions to display 
	the attribution of the configure files/devices.

20140716: 0.7.3
	* csc_cdll.c: hide the details of the CSCLNK structure so the	
	CFG_CDLL_SAFE conditional compiling macro won't mess around other
	modules. The drawback is all CSCLNK type nodes must be allocated
	by csc_cdl_alloc().

20140715: 0.7.2
	* csc_config.c: added csc_cfg_kcb_free() instead of the smm_free() to
	free the root KEYCB. Otherwise coredumped at csc_cfg_open().

20140711: 0.7.1
	* csc_config.c: added csc_cfg_read_int() and csc_cfg_write_int().

20140707: 0.7.0
	Rewrote the configure management module to concentrate in the 
	csc_config interface. Win32 registry supported.

	* smm_config.c: rewrote to be the underlayer of csc_config.c.