@@ -3,4 +3,10 @@ csoup
 *.o
 main/mkclicmd
 main/main_define.h
-
+doc/html
+doc/latex
+libcsoup-*
+main/My
+main/MyProduct
+main/logfile
+main/longpath
