@@ -24,6 +24,7 @@ SRCS	:= csc_cdll.c		\
 	   csc_memdump.c	\
 	   csc_strbody.c	\
 	   csc_strcmp_list.c	\
+	   csc_strcmp_param.c	\
 	   csc_strcpy_alloc.c	\
 	   csc_strfill.c	\
 	   csc_strlcpy.c	\
